Изменение версии java (23) -> (17)